[gd_scene load_steps=14 format=3 uid="uid://dqw8r5k2m1xvh"]

[ext_resource type="Script" path="res://scripts/combat/player_controller.gd" id="1_player"]
[ext_resource type="Script" path="res://scripts/combat/state_machine/state_machine.gd" id="2_statemachine"]
[ext_resource type="Script" path="res://scripts/combat/state_machine/states/idle_state.gd" id="3_idle"]
[ext_resource type="Script" path="res://scripts/combat/state_machine/states/move_state.gd" id="4_move"]
[ext_resource type="Script" path="res://scripts/combat/state_machine/states/fly_state.gd" id="5_fly"]
[ext_resource type="Script" path="res://scripts/combat/state_machine/states/turn_state.gd" id="6_turn"]
[ext_resource type="Script" path="res://scripts/combat/state_machine/states/attack_windup_state.gd" id="7_windup"]
[ext_resource type="Script" path="res://scripts/combat/state_machine/states/attack_active_state.gd" id="8_active"]
[ext_resource type="Script" path="res://scripts/combat/state_machine/states/attack_recovery_state.gd" id="9_recovery"]
[ext_resource type="Script" path="res://scripts/combat/state_machine/states/spell_cast_state.gd" id="10_spell"]
[ext_resource type="Script" path="res://scripts/combat/input_buffer.gd" id="11_inputbuffer"]
[ext_resource type="Script" path="res://scripts/combat/weapon_manager.gd" id="12_weaponmanager"]

[sub_resource type="CircleShape2D" id="CircleShape2D_collision"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hitbox"]
radius = 40.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_collision")

[node name="Visuals" type="Node2D" parent="."]

[node name="LegsPivot" type="Node2D" parent="Visuals"]

[node name="LegsSprite" type="Sprite2D" parent="Visuals/LegsPivot"]
modulate = Color(0.6, 0.4, 0.2, 1)
scale = Vector2(0.8, 0.8)

[node name="TorsoPivot" type="Node2D" parent="Visuals"]

[node name="TorsoSprite" type="Sprite2D" parent="Visuals/TorsoPivot"]
modulate = Color(0.3, 0.5, 0.8, 1)

[node name="HeadSprite" type="Sprite2D" parent="Visuals/TorsoPivot"]
position = Vector2(0, -8)
modulate = Color(0.9, 0.75, 0.6, 1)
scale = Vector2(0.6, 0.6)

[node name="WeaponRig" type="Node2D" parent="Visuals/TorsoPivot"]

[node name="MainHandWeapon" type="Sprite2D" parent="Visuals/TorsoPivot/WeaponRig"]
position = Vector2(20, 0)
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="OffHandWeapon" type="Sprite2D" parent="Visuals/TorsoPivot/WeaponRig"]
position = Vector2(-15, 5)
visible = false
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_statemachine")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("4_move")

[node name="Fly" type="Node" parent="StateMachine"]
script = ExtResource("5_fly")

[node name="Turn" type="Node" parent="StateMachine"]
script = ExtResource("6_turn")

[node name="AttackWindup" type="Node" parent="StateMachine"]
script = ExtResource("7_windup")

[node name="AttackActive" type="Node" parent="StateMachine"]
script = ExtResource("8_active")

[node name="AttackRecovery" type="Node" parent="StateMachine"]
script = ExtResource("9_recovery")

[node name="SpellCast" type="Node" parent="StateMachine"]
script = ExtResource("10_spell")

[node name="InputBuffer" type="Node" parent="."]
script = ExtResource("11_inputbuffer")

[node name="WeaponManager" type="Node" parent="."]
script = ExtResource("12_weaponmanager")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
monitoring = false

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_hitbox")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
